--- a/Movie recommendation system/README
+++ b/Movie recommendation system/README
@@ -1,1 +1,43 @@
+# 🎬 Basic Movie Recommendation System
+
+A beginner-friendly data science project using Python to build a simple content-based movie recommendation system using a dataset from Kaggle.
+
+---
+
+## 📌 Project Overview
+
+This project explores a movie dataset and builds a basic recommendation engine. The recommendations are generated based on:
+
+- Genre and description similarity
+- Cast/ director 
+
+It’s a small project to apply core data analysis skills and demonstrate practical use of pandas, data cleaning, and basic recommendation logic.
+
+---
+
+## 🧰 Technologies & Libraries Used
+
+- Python
+- Pandas
+- NumPy
+- Scikit-learn *(similarity metrics)*
+- Matplotlib 
+
+---
+
+## 📁 Dataset
+
+The dataset was taken from Kaggle:  
+🔗 [Kaggle Dataset Source](https://www.kaggle.com/discussions/general/281540)
+
+---
+
+## ⚙️ How It Works
+
+1. Load and clean the dataset
+2. Visualize the data to get some insight
+3. Create a simple content-based filtering function:
+   - Recommend movies with similar genres and descriptions
+
+
 
